--- a/tests/test_cases/2020/commands/6F1.607.22DDBC|e=07,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.607.22DDBC|e=07,fc=1.yaml
@@ -1,97 +1,171 @@
 command_id: 6F1.607.22DDBC|e=07,fc=1
 test_cases:
-- response: |-
-    607F10562DD688E71
-    607F1100962DDBC0212
+- expected_values:
+    MINI_HVBAT_SOC: 22.5
+    MINI_HVBAT_SOC_MAX: 95.2
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F10562DD688622
+    607F1100962DDBC00E1
     607F12103B80073FFFF
-  expected_values:
+- expected_values:
+    MINI_HVBAT_SOC: 36.8
+    MINI_HVBAT_SOC_MAX: 94.9
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F10562DD68879B
+    607F1100962DDBC0170
+    607F12103B50073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 53
     MINI_HVBAT_SOC_MAX: 95.2
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F10562DD689460
-    607F1100962DDBC02FC
-    607F12103AE0073FFFF
-  expected_values:
+  response: |-
+    607F10562DD688E71
+    607F1100962DDBC0212
+    607F12103B80073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 59.8
+    MINI_HVBAT_SOC_MAX: 95.6
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F10562DD688ED6
+    607F1100962DDBC0256
+    607F12103BC0073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 76.4
     MINI_HVBAT_SOC_MAX: 94.2
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F10562DD689643
-    607F1100962DDBC032B
-    607F12103AF0073FFFF
-  expected_values:
-    MINI_HVBAT_SOC: 81.1
-    MINI_HVBAT_SOC_MAX: 94.3
+  response: |-
+    607F10562DD689460
+    607F1100962DDBC02FC
+    607F12103AE0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 95.9
+    MINI_HVBAT_SOC_MAX: 95.4
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
+  response: |-
+    607F10562DD689837
+    607F1100962DDBC03BF
+    607F12103BA0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 85.3
+    MINI_HVBAT_SOC_MAX: 94.9
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F10562DD6899AA
+    607F1100962DDBC0355
+    607F12103B50073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 73.3
+    MINI_HVBAT_SOC_MAX: 94.9
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F110076263350000
+    607F1210060FFFFFFFF
+    607F1100962DDBC02DD
+    607F12103B50073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 65.3
+    MINI_HVBAT_SOC_MAX: 95.6
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100762DD690000
+    607F1210735FFFFFFFF
+    607F1100962DDBC028D
+    607F12103BC0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 68.9
+    MINI_HVBAT_SOC_MAX: 94.6
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
     607F1100762DD690000
     607F12107FCFFFFFFFF
     607F1100962DDBC02B1
     607F12103B20073FFFF
-  expected_values:
-    MINI_HVBAT_SOC: 68.9
-    MINI_HVBAT_SOC_MAX: 94.6
-    MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC0044
-    607F12103AE0073FFFF
-  expected_values:
+- expected_values:
     MINI_HVBAT_SOC: 6.8
     MINI_HVBAT_SOC_MAX: 94.2
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC0100
-    607F12103AD0073FFFF
-  expected_values:
+  response: |-
+    607F1100962DDBC0044
+    607F12103AE0073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 25.6
     MINI_HVBAT_SOC_MAX: 94.1
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC0115
-    607F12103B50073FFFF
-  expected_values:
-    MINI_HVBAT_SOC: 27.7
-    MINI_HVBAT_SOC_MAX: 94.9
-    MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC0194
-    607F12103B20073FFFF
-  expected_values:
+  response: |-
+    607F1100962DDBC0100
+    607F12103AD0073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 40.4
     MINI_HVBAT_SOC_MAX: 94.6
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC01FF
+  response: |-
+    607F1100962DDBC0194
     607F12103B20073FFFF
-  expected_values:
+- expected_values:
     MINI_HVBAT_SOC: 51.1
     MINI_HVBAT_SOC_MAX: 94.6
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC023B
-    607F12103AF0073FFFF
-  expected_values:
+  response: |-
+    607F1100962DDBC01FF
+    607F12103B20073FFFF
+- expected_values:
     MINI_HVBAT_SOC: 57.1
     MINI_HVBAT_SOC_MAX: 94.3
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC0296
+  response: |-
+    607F1100962DDBC023B
     607F12103AF0073FFFF
-    607F1100962DDBC0296
-    607F12103AF0073FFFF
-  expected_values:
+- expected_values:
     MINI_HVBAT_SOC: 66.2
     MINI_HVBAT_SOC_MAX: 94.3
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
-    607F1100962DDBC0300
-    607F12103AD0073FFFF
-  expected_values:
-    MINI_HVBAT_SOC: 76.8
-    MINI_HVBAT_SOC_MAX: 94.1
+  response: |-
+    607F1100962DDBC0296
+    607F12103AF0073FFFF
+    607F1100962DDBC0296
+    607F12103AF0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 87.2
+    MINI_HVBAT_SOC_MAX: 95.6
     MINI_HVBAT_SOC_MIN: 11.5
-- response: |-
+  response: |-
+    607F1100962DDBC0368
+    607F12103BC0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 93.4
+    MINI_HVBAT_SOC_MAX: 95.6
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDBC03A6
+    607F12103BC0073FFFF
+    607F1100962DDBC03A6
+    607F12103BC0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 53.1
+    MINI_HVBAT_SOC_MAX: 95.4
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDC00941
+    607F121095F095DFFFF
+    607F1100962DDBC0213
+    607F12103BA0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 100
+    MINI_HVBAT_SOC_MAX: 95.6
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
+    607F1100962DDC009C3
+    607F1210A8B0A1CFFFF
+    607F1100962DDBC03E8
+    607F12103BC0073FFFF
+- expected_values:
+    MINI_HVBAT_SOC: 74
+    MINI_HVBAT_SOC_MAX: 94.3
+    MINI_HVBAT_SOC_MIN: 11.5
+  response: |-
     607F1102962DFA023C0
     607F121254A24A499A5
     607F12299F599CE0898
@@ -101,7 +175,3 @@ test_cases:
     607F1269A6A9A502A8D
     607F1100962DDBC02E4
     607F12103AF0073FFFF
-  expected_values:
-    MINI_HVBAT_SOC: 74
-    MINI_HVBAT_SOC_MAX: 94.3
-    MINI_HVBAT_SOC_MIN: 11.5
