--- a/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -1,16 +1,41 @@
 command_id: 6F1.660.22D10D|e=60,fc=1
 test_cases:
-- response: |-
+- expected_values:
+    MINI_ODO1: 43606
+    MINI_ODO2: 43606
+  response: |-
     660F10562D1070000
     660F1100F62D11103C0
     660F1210596041AFFFF
     660F12245C00069FFFF
     660F1100B62D10D0000
     660F121AA560000AA56
-  expected_values:
-    MINI_ODO1: 43606
-    MINI_ODO2: 43606
-- response: |-
+- expected_values:
+    MINI_ODO1: 43696
+    MINI_ODO2: 43696
+  response: |-
+    660F10562D107006A
+    660F10562D1127172
+    660F1100F62D11104CE
+    660F12105AA0596FFFF
+    660F12244A60053FFFF
+    660F1100B62D10D0000
+    660F121AAB00000AAB0
+- expected_values:
+    MINI_ODO1: 43689
+    MINI_ODO2: 43689
+  response: |-
+    660F10562D1070203
+    660F1100F62D11104CE
+    660F12105820596FFFF
+    660F12246E60053FFFF
+    660F1100B62D10D0000
+    660F121AAA90000AAA9
+    660F10562D1127373
+- expected_values:
+    MINI_ODO1: 42431
+    MINI_ODO2: 42431
+  response: |-
     660F10562D1070375
     660F10562D1126E6E
     660F1100F62D1110064
@@ -18,10 +43,10 @@ test_cases:
     660F1224B52003FFFFF
     660F1100B62D10D0000
     660F121A5BF0000A5BF
-  expected_values:
-    MINI_ODO1: 42431
-    MINI_ODO2: 42431
-- response: |-
+- expected_values:
+    MINI_ODO1: 42043
+    MINI_ODO2: 42043
+  response: |-
     660F10562D1070523
     660F1100F62D1110320
     660F12104BA0320FFFF
@@ -29,56 +54,50 @@ test_cases:
     660F10562D1126E6F
     660F1100B62D10D0000
     660F121A43B0000A43B
-  expected_values:
-    MINI_ODO1: 42043
-    MINI_ODO2: 42043
-- response: |-
+- expected_values:
+    MINI_ODO1: 43057
+    MINI_ODO2: 43057
+  response: |-
     660F10562D1126365
     660F1100B62D10D0000
     660F121A8310000A831
-  expected_values:
-    MINI_ODO1: 43057
-    MINI_ODO2: 43057
-- response: |-
+- expected_values:
+    MINI_ODO1: 42061
+    MINI_ODO2: 42061
+  response: |-
     660F10562D1126D6E
     660F1100B62D10D0000
     660F121A44D0000A44D
-  expected_values:
-    MINI_ODO1: 42061
-    MINI_ODO2: 42061
-- response: |-
-    660F1100B62D10D0000
-    660F121A30A0000A30A
-  expected_values:
+- expected_values:
     MINI_ODO1: 41738
     MINI_ODO2: 41738
-- response: |-
+  response: |-
     660F1100B62D10D0000
-    660F121A30F0000A30F
-  expected_values:
+    660F121A30A0000A30A
+- expected_values:
     MINI_ODO1: 41743
     MINI_ODO2: 41743
-- response: |-
+  response: |-
     660F1100B62D10D0000
-    660F121A3100000A310
-  expected_values:
+    660F121A30F0000A30F
+- expected_values:
     MINI_ODO1: 41744
     MINI_ODO2: 41744
-- response: |-
+  response: |-
     660F1100B62D10D0000
-    660F121A54B0000A54B
-  expected_values:
-    MINI_ODO1: 42315
-    MINI_ODO2: 42315
-- response: |-
-    660F1100B62D10D0000
-    660F121A5C00000A5C0
-    660F1100B62D10D0000
-    660F121A5C00000A5C0
-  expected_values:
+    660F121A3100000A310
+- expected_values:
     MINI_ODO1: 42432
     MINI_ODO2: 42432
-- response: |-
+  response: |-
+    660F1100B62D10D0000
+    660F121A5C00000A5C0
+    660F1100B62D10D0000
+    660F121A5C00000A5C0
+- expected_values:
+    MINI_ODO1: 43071
+    MINI_ODO2: 43071
+  response: |-
     660F1100B62D10D0000
     660F121A83F0000A83F
     660F1100F62D11102DA
@@ -88,12 +107,15 @@ test_cases:
     660F10562D107020D
     660F1100B62D10D0000
     660F121A83F0000A83F
-  expected_values:
-    MINI_ODO1: 43071
-    MINI_ODO2: 43071
-- response: |-
+- expected_values:
+    MINI_ODO1: 43928
+    MINI_ODO2: 43928
+  response: |-
     660F1100B62D10D0000
-    660F121AA800000AA80
-  expected_values:
-    MINI_ODO1: 43648
-    MINI_ODO2: 43648
+    660F121AB980000AB98
+- expected_values:
+    MINI_ODO1: 44259
+    MINI_ODO2: 44259
+  response: |-
+    660F1100B62D10D0000
+    660F121ACE30000ACE3
