--- a/tests/test_cases/2022/commands/6F1.607.22DFA0|e=07,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.607.22DFA0|e=07,fc=1.yaml
@@ -1,14 +1,6 @@
 command_id: 6F1.607.22DFA0|e=07,fc=1
 test_cases:
-- response: |-
-    607F1102962DFA02428
-    607F121259F24CE95CF
-    607F122969B96340C81
-    607F1230CE50C8BFFFF
-    607F124FFFF37C51BF4
-    607F1251D671C99FFFF
-    607F126FFFFFFFF37C5
-  expected_values:
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.22
     MINI_HVBAT_C_CAP_MAX: 96.31
     MINI_HVBAT_C_CAP_MIN: 92.56
@@ -28,15 +20,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.8555
     MINI_HVBAT_C_V_MIN: 3.8351
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4277
-- response: |-
+  response: |-
     607F1102962DFA02428
-    607F121259F24CE970E
-    607F12297B397630C7F
-    607F1230CED0CDBFFFF
-    607F124FFFF37AB1BAC
-    607F1251D1F1C50FFFF
-    607F126FFFFFFFF37AB
-  expected_values:
+    607F121259F24CE95CF
+    607F122969B96340C81
+    607F1230CE50C8BFFFF
+    607F124FFFF37C51BF4
+    607F1251D671C99FFFF
+    607F126FFFFFFFF37C5
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.22
     MINI_HVBAT_C_CAP_MAX: 96.31
     MINI_HVBAT_C_CAP_MIN: 92.56
@@ -56,15 +48,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.8835
     MINI_HVBAT_C_V_MIN: 3.867
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4251
-- response: |-
+  response: |-
     607F1102962DFA02428
-    607F121259F24CE9897
-    607F12298FD98C30C8B
-    607F1230CEF0CBBFFFF
-    607F124FFFF37AB1BD3
-    607F1251D461C78FFFF
+    607F121259F24CE970E
+    607F12297B397630C7F
+    607F1230CED0CDBFFFF
+    607F124FFFF37AB1BAC
+    607F1251D1F1C50FFFF
     607F126FFFFFFFF37AB
-  expected_values:
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.22
     MINI_HVBAT_C_CAP_MAX: 96.31
     MINI_HVBAT_C_CAP_MIN: 92.56
@@ -84,15 +76,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9165
     MINI_HVBAT_C_V_MIN: 3.9063
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4251
-- response: |-
+  response: |-
     607F1102962DFA02428
-    607F121259F24CE98C5
-    607F122993398F60C81
-    607F1230D0C0CDDFFFF
-    607F124FFFF37B01BBC
-    607F1251D301C61FFFF
-    607F126FFFFFFFF37B0
-  expected_values:
+    607F121259F24CE9897
+    607F12298FD98C30C8B
+    607F1230CEF0CBBFFFF
+    607F124FFFF37AB1BD3
+    607F1251D461C78FFFF
+    607F126FFFFFFFF37AB
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.22
     MINI_HVBAT_C_CAP_MAX: 96.31
     MINI_HVBAT_C_CAP_MIN: 92.56
@@ -112,15 +104,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9219
     MINI_HVBAT_C_V_MIN: 3.9109
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4256
-- response: |-
+  response: |-
     607F1102962DFA02428
-    607F121259F24CE99A2
-    607F12299FF99CA0C80
-    607F1230CE40C89FFFF
-    607F124FFFF37C91C0B
-    607F1251D7E1CB0FFFF
-    607F126FFFFFFFF37C9
-  expected_values:
+    607F121259F24CE98C5
+    607F122993398F60C81
+    607F1230D0C0CDDFFFF
+    607F124FFFF37B01BBC
+    607F1251D301C61FFFF
+    607F126FFFFFFFF37B0
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.22
     MINI_HVBAT_C_CAP_MAX: 96.31
     MINI_HVBAT_C_CAP_MIN: 92.56
@@ -140,15 +132,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9423
     MINI_HVBAT_C_V_MIN: 3.933
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4281
-- response: |-
+  response: |-
     607F1102962DFA02428
-    607F121259F24CE99A9
-    607F1229A0899D20C7F
-    607F1230CE30C88FFFF
-    607F124FFFF37C91C17
-    607F1251D8A1CBCFFFF
+    607F121259F24CE99A2
+    607F12299FF99CA0C80
+    607F1230CE40C89FFFF
+    607F124FFFF37C91C0B
+    607F1251D7E1CB0FFFF
     607F126FFFFFFFF37C9
-  expected_values:
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.22
     MINI_HVBAT_C_CAP_MAX: 96.31
     MINI_HVBAT_C_CAP_MIN: 92.56
@@ -168,15 +160,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9432
     MINI_HVBAT_C_V_MIN: 3.9337
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4281
-- response: |-
+  response: |-
     607F1102962DFA02428
-    607F121259F24CE99AB
-    607F1229A0399D00C7F
+    607F121259F24CE99A9
+    607F1229A0899D20C7F
     607F1230CE30C88FFFF
-    607F124FFFF37C91C10
-    607F1251D831CB5FFFF
+    607F124FFFF37C91C17
+    607F1251D8A1CBCFFFF
     607F126FFFFFFFF37C9
-  expected_values:
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.22
     MINI_HVBAT_C_CAP_MAX: 96.31
     MINI_HVBAT_C_CAP_MIN: 92.56
@@ -196,15 +188,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9427
     MINI_HVBAT_C_V_MIN: 3.9339
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4281
-- response: |-
-    607F1102962DFA0245E
-    607F12125EE251B8F8E
-    607F12290B290300C85
-    607F1230DAF0D53FFFF
-    607F124FFFF359B16FF
-    607F12518AC17C2FFFF
-    607F126FFFFFFFF359B
-  expected_values:
+  response: |-
+    607F1102962DFA02428
+    607F121259F24CE99AB
+    607F1229A0399D00C7F
+    607F1230CE30C88FFFF
+    607F124FFFF37C91C10
+    607F1251D831CB5FFFF
+    607F126FFFFFFFF37C9
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.99
     MINI_HVBAT_C_CAP_MAX: 97.1
     MINI_HVBAT_C_CAP_MIN: 93.1
@@ -224,15 +216,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.7042
     MINI_HVBAT_C_V_MIN: 3.675
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.3723
-- response: |-
+  response: |-
     607F1102962DFA0245E
-    607F12125EE251B934C
-    607F1229404939C0CC6
-    607F1230D840D3FFFFF
-    607F124FFFF359C1719
-    607F12518C617DBFFFF
-    607F126FFFFFFFF359C
-  expected_values:
+    607F12125EE251B8F8E
+    607F12290B290300C85
+    607F1230DAF0D53FFFF
+    607F124FFFF359B16FF
+    607F12518AC17C2FFFF
+    607F126FFFFFFFF359B
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.99
     MINI_HVBAT_C_CAP_MAX: 97.1
     MINI_HVBAT_C_CAP_MIN: 93.1
@@ -252,15 +244,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.7892
     MINI_HVBAT_C_V_MIN: 3.7708
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.3724
-- response: |-
+  response: |-
     607F1102962DFA0245E
-    607F12125EE251B93CE
-    607F122948294160C90
-    607F1230DAD0D49FFFF
-    607F124FFFF359C1707
-    607F12518B417CAFFFF
+    607F12125EE251B934C
+    607F1229404939C0CC6
+    607F1230D840D3FFFFF
+    607F124FFFF359C1719
+    607F12518C617DBFFFF
     607F126FFFFFFFF359C
-  expected_values:
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.99
     MINI_HVBAT_C_CAP_MAX: 97.1
     MINI_HVBAT_C_CAP_MIN: 93.1
@@ -280,15 +272,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.8018
     MINI_HVBAT_C_V_MIN: 3.7838
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.3724
-- response: |-
+  response: |-
     607F1102962DFA0245E
-    607F12125EE251B98F9
-    607F122997799390BBF
-    607F1230CEB0C70FFFF
-    607F124FFFF37621D29
-    607F1251ED61DEB9B50
-    607F1269BBE9B813762
-  expected_values:
+    607F12125EE251B93CE
+    607F122948294160C90
+    607F1230DAD0D49FFFF
+    607F124FFFF359C1707
+    607F12518B417CAFFFF
+    607F126FFFFFFFF359C
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.99
     MINI_HVBAT_C_CAP_MAX: 97.1
     MINI_HVBAT_C_CAP_MIN: 93.1
@@ -308,15 +300,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9287
     MINI_HVBAT_C_V_MIN: 3.9161
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4178
-- response: |-
+  response: |-
     607F1102962DFA0245E
-    607F12125EE251B9943
-    607F12299B0997B0BB7
-    607F1230CE30C6FFFFF
-    607F124FFFF374A1D1C
-    607F1251EC91DDF9B50
-    607F1269BBE9B81374A
-  expected_values:
+    607F12125EE251B98F9
+    607F122997799390BBF
+    607F1230CEB0C70FFFF
+    607F124FFFF37621D29
+    607F1251ED61DEB9B50
+    607F1269BBE9B813762
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.99
     MINI_HVBAT_C_CAP_MAX: 97.1
     MINI_HVBAT_C_CAP_MIN: 93.1
@@ -336,15 +328,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9344
     MINI_HVBAT_C_V_MIN: 3.9235
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4154
-- response: |-
+  response: |-
     607F1102962DFA0245E
-    607F12125EE251B9A92
-    607F1229AF19ABD0BB6
-    607F1230CE10C5CFFFF
-    607F124FFFF37641D63
-    607F1251F101E269B50
-    607F1269BBE9B813764
-  expected_values:
+    607F12125EE251B9943
+    607F12299B0997B0BB7
+    607F1230CE30C6FFFFF
+    607F124FFFF374A1D1C
+    607F1251EC91DDF9B50
+    607F1269BBE9B81374A
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.99
     MINI_HVBAT_C_CAP_MAX: 97.1
     MINI_HVBAT_C_CAP_MIN: 93.1
@@ -364,15 +356,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.9665
     MINI_HVBAT_C_V_MIN: 3.957
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.418
-- response: |-
-    607F1102962DFA02467
-    607F12125CC25109DA0
-    607F1229DEB9DC70C1C
-    607F1230C800C77FFFF
-    607F124FFFF39221F5E
-    607F12520DE20189F92
-    607F1269FCE9FB13922
-  expected_values:
+  response: |-
+    607F1102962DFA0245E
+    607F12125EE251B9A92
+    607F1229AF19ABD0BB6
+    607F1230CE10C5CFFFF
+    607F124FFFF37641D63
+    607F1251F101E269B50
+    607F1269BBE9B813764
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.88
     MINI_HVBAT_C_CAP_MAX: 96.76
     MINI_HVBAT_C_CAP_MIN: 93.19
@@ -392,15 +384,15 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 4.0427
     MINI_HVBAT_C_V_MIN: 4.0352
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4626
-- response: |-
-    607F1102962DFA02471
-    607F12125C9251098D6
-    607F122994899050C69
-    607F1230CE10C8EFFFF
-    607F124FFFF383A1B7A
-    607F1251CF41C309ED4
-    607F1269F069EEE383A
-  expected_values:
+  response: |-
+    607F1102962DFA02467
+    607F12125CC25109DA0
+    607F1229DEB9DC70C1C
+    607F1230C800C77FFFF
+    607F124FFFF39221F5E
+    607F12520DE20189F92
+    607F1269FCE9FB13922
+- expected_values:
     MINI_HVBAT_C_CAP_AVG: 94.88
     MINI_HVBAT_C_CAP_MAX: 96.73
     MINI_HVBAT_C_CAP_MIN: 93.29
@@ -420,3 +412,11 @@ test_cases:
     MINI_HVBAT_C_V_MAX: 3.924
     MINI_HVBAT_C_V_MIN: 3.9126
     MINI_HVBAT_IMPEDANCE_ALPHA: 1.4394
+  response: |-
+    607F1102962DFA02471
+    607F12125C9251098D6
+    607F122994899050C69
+    607F1230CE10C8EFFFF
+    607F124FFFF383A1B7A
+    607F1251CF41C309ED4
+    607F1269F069EEE383A
