--- a/tests/test_cases/2022/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.61A.22DE00|e=1A,fc=1.yaml
@@ -1,170 +1,170 @@
 command_id: 6F1.61A.22DE00|e=1A,fc=1
 test_cases:
-- response: |-
-    61AF1101C62DE00024B
-    61AF121170000010100
-    61AF122590A3207D005
-    61AF123820119000B0E
-    61AF1240500FC0581FF
-  expected_values:
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 58.7
-- response: |-
-    61AF1101C62DE00024E
+  response: |-
+    61AF1101C62DE00024B
     61AF121170000010100
-    61AF122570A2D07D005
-    61AF12382011C000C0E
-    61AF1244401180580FF
-  expected_values:
+    61AF122590A3207D005
+    61AF123820119000B0E
+    61AF1240500FC0581FF
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 59
-- response: |-
-    61AF1101C62DE00024F
+  response: |-
+    61AF1101C62DE00024E
     61AF121170000010100
-    61AF122570A2C07D005
-    61AF123820122000E0E
-    61AF1243601550583FF
-  expected_values:
+    61AF122570A2D07D005
+    61AF12382011C000C0E
+    61AF1244401180580FF
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 59.1
-- response: |-
+  response: |-
+    61AF1101C62DE00024F
+    61AF121170000010100
+    61AF122570A2C07D005
+    61AF123820122000E0E
+    61AF1243601550583FF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 0
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 70.3
+  response: |-
     61AF1101C62DE0002BF
     61AF121170000000100
     61AF122550A2907D005
     61AF12378010B00050E
     61AF124AB00700579FF
-  expected_values:
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 0
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 70.3
-- response: |-
+  response: |-
     61AF1101C62DE0002BF
     61AF121170000000100
     61AF122550A2A07D005
     61AF12378010900050E
     61AF124B000620578FF
-  expected_values:
-    MINI_HVBAT_CHG_CON: 0
-    MINI_HVBAT_CHG_CON_EXT: 0
-    MINI_HVBAT_CHG_RDY: 0
-    MINI_HVBAT_HVPM_MIN_SOC: 11.5
-    MINI_HVBAT_HVPM_SOC: 70.3
-- response: |-
-    61AF1101C62DE0002C2
-    61AF121170000000100
-    61AF122120A2907D005
-    61AF12378013B00060E
-    61AF124B5008A057BFF
-  expected_values:
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 0
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 70.6
-- response: |-
-    61AF1101C62DE0002C4
-    61AF121170000010100
-    61AF122540A2A07D005
-    61AF123820115000A0E
-    61AF124DC00D30583FF
-  expected_values:
+  response: |-
+    61AF1101C62DE0002C2
+    61AF121170000000100
+    61AF122120A2907D005
+    61AF12378013B00060E
+    61AF124B5008A057BFF
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 70.8
-- response: |-
-    61AF1101C62DE0002C8
+  response: |-
+    61AF1101C62DE0002C4
     61AF121170000010100
-    61AF122570A3407D005
-    61AF12382011500090E
-    61AF1244400D00581FF
-  expected_values:
+    61AF122540A2A07D005
+    61AF123820115000A0E
+    61AF124DC00D30583FF
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 71.2
-- response: |-
-    61AF1101C62DE0002CD
+  response: |-
+    61AF1101C62DE0002C8
     61AF121170000010100
-    61AF122550A2907D005
-    61AF1238C012800100E
-    61AF124B5018A058BFF
-  expected_values:
+    61AF122570A3407D005
+    61AF12382011500090E
+    61AF1244400D00581FF
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 71.7
-- response: |-
+  response: |-
+    61AF1101C62DE0002CD
+    61AF121170000010100
+    61AF122550A2907D005
+    61AF1238C012800100E
+    61AF124B5018A058BFF
+- expected_values:
+    MINI_HVBAT_CHG_CON: 0
+    MINI_HVBAT_CHG_CON_EXT: 0
+    MINI_HVBAT_CHG_RDY: 1
+    MINI_HVBAT_HVPM_MIN_SOC: 11.5
+    MINI_HVBAT_HVPM_SOC: 71.8
+  response: |-
     61AF1101C62DE0002CE
     61AF121170000010100
     61AF122540A2807D005
     61AF12382011400090E
     61AF124C300CE0584FF
-  expected_values:
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 71.8
-- response: |-
+  response: |-
     61AF1101C62DE0002CE
     61AF121170000010100
     61AF122540A2907D005
     61AF1238C012800100E
     61AF124BA018B058CFF
-  expected_values:
-    MINI_HVBAT_CHG_CON: 0
-    MINI_HVBAT_CHG_CON_EXT: 0
-    MINI_HVBAT_CHG_RDY: 1
-    MINI_HVBAT_HVPM_MIN_SOC: 11.5
-    MINI_HVBAT_HVPM_SOC: 71.8
-- response: |-
-    61AF1101C62DE0002EC
-    61AF121170000010100
-    61AF122550A2C07D005
-    61AF123820120000D0E
-    61AF124A601430582FF
-  expected_values:
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 74.8
-- response: |-
-    61AF1101C62DE0002F0
+  response: |-
+    61AF1101C62DE0002EC
     61AF121170000010100
-    61AF122540A2907D005
-    61AF123820121000E0E
-    61AF124D701500582FF
-  expected_values:
+    61AF122550A2C07D005
+    61AF123820120000D0E
+    61AF124A601430582FF
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 1
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 75.2
-- response: |-
-    61AF1101C62DE000323
-    61AF121170000000100
-    61AF122520A2807D005
-    61AF12378010B00050F
-    61AF124200072057BFF
-  expected_values:
+  response: |-
+    61AF1101C62DE0002F0
+    61AF121170000010100
+    61AF122540A2907D005
+    61AF123820121000E0E
+    61AF124D701500582FF
+- expected_values:
     MINI_HVBAT_CHG_CON: 0
     MINI_HVBAT_CHG_CON_EXT: 0
     MINI_HVBAT_CHG_RDY: 0
     MINI_HVBAT_HVPM_MIN_SOC: 11.5
     MINI_HVBAT_HVPM_SOC: 80.3
+  response: |-
+    61AF1101C62DE000323
+    61AF121170000000100
+    61AF122520A2807D005
+    61AF12378010B00050F
+    61AF124200072057BFF
