--- a/tests/test_cases/2022/commands/6F1.660.22D10D|e=60,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.660.22D10D|e=60,fc=1.yaml
@@ -1,56 +1,56 @@
 command_id: 6F1.660.22D10D|e=60,fc=1
 test_cases:
-- response: |-
-    660F1100B62D10D0001
-    660F121245500012455
-  expected_values:
+- expected_values:
     MINI_ODO1: 74837
     MINI_ODO2: 74837
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F121245600012456
-  expected_values:
+    660F121245500012455
+- expected_values:
     MINI_ODO1: 74838
     MINI_ODO2: 74838
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F121245700012457
-  expected_values:
+    660F121245600012456
+- expected_values:
     MINI_ODO1: 74839
     MINI_ODO2: 74839
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F12126A1000126A1
-  expected_values:
+    660F121245700012457
+- expected_values:
     MINI_ODO1: 75425
     MINI_ODO2: 75425
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F12126BF000126BF
-  expected_values:
+    660F12126A1000126A1
+- expected_values:
     MINI_ODO1: 75455
     MINI_ODO2: 75455
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F121276000012760
-  expected_values:
+    660F12126BF000126BF
+- expected_values:
     MINI_ODO1: 75616
     MINI_ODO2: 75616
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F121276100012761
-  expected_values:
+    660F121276000012760
+- expected_values:
     MINI_ODO1: 75617
     MINI_ODO2: 75617
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F121278400012784
-  expected_values:
+    660F121276100012761
+- expected_values:
     MINI_ODO1: 75652
     MINI_ODO2: 75652
-- response: |-
+  response: |-
     660F1100B62D10D0001
-    660F121278500012785
-  expected_values:
+    660F121278400012784
+- expected_values:
     MINI_ODO1: 75653
     MINI_ODO2: 75653
+  response: |-
+    660F1100B62D10D0001
+    660F121278500012785
