--- a/tests/test_cases/2020/commands/6F1.607.22DD68|e=07,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.607.22DD68|e=07,fc=1.yaml
@@ -1,17 +1,17 @@
 command_id: 6F1.607.22DD68|e=07,fc=1
 test_cases:
-- response: 607F10562DD688175
-  expected_values:
+- expected_values:
     MINI_HVBAT_VOLT: 331.41
-- response: 607F10562DD688549
-  expected_values:
+  response: 607F10562DD688175
+- expected_values:
     MINI_HVBAT_VOLT: 341.21
-- response: 607F10562DD6890FF
-  expected_values:
-    MINI_HVBAT_VOLT: 371.19
-- response: 607F10562DD689101
-  expected_values:
-    MINI_HVBAT_VOLT: 371.21
-- response: 607F10562DD689B01
-  expected_values:
+  response: 607F10562DD688549
+- expected_values:
+    MINI_HVBAT_VOLT: 363.51
+  response: 607F10562DD688DFF
+- expected_values:
+    MINI_HVBAT_VOLT: 384
+  response: 607F10562DD689600
+- expected_values:
     MINI_HVBAT_VOLT: 396.81
+  response: 607F10562DD689B01
