--- a/tests/test_cases/2020/commands/6F1.629.22DBE4|e=29,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.629.22DBE4|e=29,fc=1.yaml
@@ -1,100 +1,119 @@
 command_id: 6F1.629.22DBE4|e=29,fc=1
 test_cases:
-- response: |-
-    629F1101662DBE40000
-    629F121000000000000
-    629F122000000000000
-    629F1230064646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 0
     MINI_FR_SPD: 0
     MINI_RL_SPD: 0
     MINI_RR_SPD: 0
-- response: |-
+  response: |-
     629F1101662DBE40000
     629F121000000000000
     629F122000000000000
     629F1230064646464FF
-    629F1101662DBE40000
-    629F121000000000000
-    629F122000000000000
-    629F1230064646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 0
     MINI_FR_SPD: 0
     MINI_RL_SPD: 0
     MINI_RR_SPD: 0
-- response: |-
+  response: |-
+    629F1101662DBE40000
+    629F121000000000000
+    629F122000000000000
+    629F1230064646464FF
+    629F1101662DBE40000
+    629F121000000000000
+    629F122000000000000
+    629F1230064646464FF
+- expected_values:
+    MINI_FL_SPD: 0
+    MINI_FR_SPD: 0
+    MINI_RL_SPD: 0
+    MINI_RR_SPD: 0
+  response: |-
     629F1101662DBE40000
     629F121000000000000
     629F122000003030303
     629F1230064646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 0
     MINI_FR_SPD: 0
     MINI_RL_SPD: 0
     MINI_RR_SPD: 0
-- response: |-
+  response: |-
     629F1101662DBE40000
     629F121000000000000
     629F122000003030303
     629F1230364646464FF
-  expected_values:
-    MINI_FL_SPD: 0
-    MINI_FR_SPD: 0
-    MINI_RL_SPD: 0
-    MINI_RR_SPD: 0
-- response: |-
-    629F1101662DBE4000D
-    629F121000C000D000F
-    629F122000002020202
-    629F1230264646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 0.13
     MINI_FR_SPD: 0.12
     MINI_RL_SPD: 0.13
     MINI_RR_SPD: 0.15
-- response: |-
-    629F1101662DBE408E1
-    629F121098808B50965
+  response: |-
+    629F1101662DBE4000D
+    629F121000C000D000F
+    629F122000002020202
+    629F1230264646464FF
+- expected_values:
+    MINI_FL_SPD: 0
+    MINI_FR_SPD: 0
+    MINI_RL_SPD: 0
+    MINI_RR_SPD: 0
+  response: |-
+    629F1101662DBE4000D
+    629F121000D000C000C
+    629F122000000000000
+    629F1230064646464FF
+    629F1101662DBE40000
+    629F121000000000000
+    629F122000000000000
+    629F1230064646464FF
+- expected_values:
+    MINI_FL_SPD: 2.55
+    MINI_FR_SPD: 2.96
+    MINI_RL_SPD: 2.35
+    MINI_RR_SPD: 2.82
+  response: |-
+    629F1101662DBE400FF
+    629F121012800EB011A
+    629F12200C801010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 20.72
+    MINI_FR_SPD: 23.18
+    MINI_RL_SPD: 20.55
+    MINI_RR_SPD: 23.09
+  response: |-
+    629F1101662DBE40818
+    629F121090E08070905
     629F12208FC01010101
     629F1230164646464FF
-  expected_values:
-    MINI_FL_SPD: 22.73
-    MINI_FR_SPD: 24.4
-    MINI_RL_SPD: 22.29
-    MINI_RR_SPD: 24.05
-- response: |-
-    629F1101662DBE409FF
-    629F1210A0C09ED09FB
-    629F12209C401010101
-    629F1230164646464FF
-  expected_values:
-    MINI_FL_SPD: 25.59
-    MINI_FR_SPD: 25.72
-    MINI_RL_SPD: 25.41
-    MINI_RR_SPD: 25.55
-- response: |-
-    629F1101662DBE40FCB
-    629F1210FC00FC70FF1
+- expected_values:
+    MINI_FL_SPD: 40.34
+    MINI_FR_SPD: 40.42
+    MINI_RL_SPD: 40.76
+    MINI_RR_SPD: 40.89
+  response: |-
+    629F1101662DBE40FC2
+    629F1210FCA0FEC0FF9
     629F1220FA001010101
     629F1230164646464FF
-  expected_values:
-    MINI_FL_SPD: 40.43
-    MINI_FR_SPD: 40.32
-    MINI_RL_SPD: 40.39
-    MINI_RR_SPD: 40.81
-- response: |-
-    629F1101662DBE40FEB
-    629F1210FF20FF20FF1
-    629F1220FA001010101
-    629F1230164646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 40.75
     MINI_FR_SPD: 40.82
     MINI_RL_SPD: 40.82
     MINI_RR_SPD: 40.81
-- response: |-
+  response: |-
+    629F1101662DBE40FEB
+    629F1210FF20FF20FF1
+    629F1220FA001010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 41.11
+    MINI_FR_SPD: 41.1
+    MINI_RL_SPD: 41.14
+    MINI_RR_SPD: 41.05
+  response: |-
     629F1101662DBE410BF
     629F12110BD10C110B5
     629F122106801010101
@@ -103,42 +122,42 @@ test_cases:
     629F121100E10121009
     629F122100401010101
     629F1230164646464FF
-  expected_values:
-    MINI_FL_SPD: 41.11
-    MINI_FR_SPD: 41.1
-    MINI_RL_SPD: 41.14
-    MINI_RR_SPD: 41.05
-- response: |-
-    629F1101662DBE43003
-    629F12130122FB72FA0
-    629F1222FA801010101
-    629F1230164646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 122.91
     MINI_FR_SPD: 123.06
     MINI_RL_SPD: 122.15
     MINI_RR_SPD: 121.92
-- response: |-
-    629F1101662DBE43047
-    629F1213064302F3025
-    629F122300C01010101
+  response: |-
+    629F1101662DBE43003
+    629F12130122FB72FA0
+    629F1222FA801010101
     629F1230164646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 123.59
     MINI_FR_SPD: 123.88
     MINI_RL_SPD: 123.35
     MINI_RR_SPD: 123.25
-- response: |-
-    629F1101662DBE43106
-    629F121311F30E830E3
-    629F12230D401010101
+  response: |-
+    629F1101662DBE43047
+    629F1213064302F3025
+    629F122300C01010101
     629F1230164646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 125.5
     MINI_FR_SPD: 125.75
     MINI_RL_SPD: 125.2
     MINI_RR_SPD: 125.15
-- response: |-
+  response: |-
+    629F1101662DBE43106
+    629F121311F30E830E3
+    629F12230D401010101
+    629F1230164646464FF
+- expected_values:
+    MINI_FL_SPD: 125.75
+    MINI_FR_SPD: 125.6
+    MINI_RL_SPD: 125.15
+    MINI_RR_SPD: 125.15
+  response: |-
     629F1101662DBE43115
     629F121310B30D930D4
     629F12230D401010101
@@ -147,18 +166,13 @@ test_cases:
     629F121311030E330E3
     629F12230D401010101
     629F1230164646464FF
-  expected_values:
-    MINI_FL_SPD: 125.75
-    MINI_FR_SPD: 125.6
-    MINI_RL_SPD: 125.15
-    MINI_RR_SPD: 125.15
-- response: |-
-    629F1101662DBE43931
-    629F121393738EF38E9
-    629F122390801010101
-    629F1230164646464FF
-  expected_values:
+- expected_values:
     MINI_FL_SPD: 146.41
     MINI_FR_SPD: 146.47
     MINI_RL_SPD: 145.75
     MINI_RR_SPD: 145.69
+  response: |-
+    629F1101662DBE43931
+    629F121393738EF38E9
+    629F122390801010101
+    629F1230164646464FF
