--- a/tests/test_cases/2020/commands/6F1.660.22D111|e=60,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.660.22D111|e=60,fc=1.yaml
@@ -1,17 +1,57 @@
 command_id: 6F1.660.22D111|e=60,fc=1
 test_cases:
-- response: |-
-    660F10562D1127474
-    660F1100F62D11103CA
-    660F12105960424FFFF
-    660F12241C70054FFFF
-  expected_values:
+- expected_values:
+    MINI_AUX_PWR: 0.99
+    MINI_RANGE_E_CUR: 121
+    MINI_RANGE_E_MAX: 147
+    MINI_RANGE_E_USE: 17.056
+    MINI_RANGE_F_CUR: 137
+  response: |-
+    660F10562D1070079
+    660F10562D1127D7E
+    660F1100F62D11104BA
+    660F12105BE055AFFFF
+    660F12242A00063FFFF
+- expected_values:
     MINI_AUX_PWR: 0.84
     MINI_RANGE_E_CUR: 97
     MINI_RANGE_E_MAX: 143
     MINI_RANGE_E_USE: 16.839
     MINI_RANGE_F_CUR: 106
-- response: |-
+  response: |-
+    660F10562D1127474
+    660F1100F62D11103CA
+    660F12105960424FFFF
+    660F12241C70054FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.87
+    MINI_RANGE_E_CUR: 119
+    MINI_RANGE_E_MAX: 143
+    MINI_RANGE_E_USE: 17.677
+    MINI_RANGE_F_CUR: 139
+  response: |-
+    660F10562D1127676
+    660F1100F62D11104A6
+    660F1210596056EFFFF
+    660F122450D0057FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.89
+    MINI_RANGE_E_CUR: 135
+    MINI_RANGE_E_MAX: 137
+    MINI_RANGE_E_USE: 17.83
+    MINI_RANGE_F_CUR: 155
+  response: |-
+    660F10562D1127979
+    660F1100F62D1110546
+    660F121055A060EFFFF
+    660F12245A60059FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.77
+    MINI_RANGE_E_CUR: 127
+    MINI_RANGE_E_MAX: 152
+    MINI_RANGE_E_USE: 16.265
+    MINI_RANGE_F_CUR: 139
+  response: |-
     660F1100B62D10D0000
     660F121A7A60000A7A6
     660F10562D1070000
@@ -19,13 +59,13 @@ test_cases:
     660F1100F62D11104F6
     660F12105F0056EFFFF
     660F1223F89004DFFFF
-  expected_values:
-    MINI_AUX_PWR: 0.77
-    MINI_RANGE_E_CUR: 127
-    MINI_RANGE_E_MAX: 152
-    MINI_RANGE_E_USE: 16.265
-    MINI_RANGE_F_CUR: 139
-- response: |-
+- expected_values:
+    MINI_AUX_PWR: 0.89
+    MINI_RANGE_E_CUR: 98
+    MINI_RANGE_E_MAX: 142
+    MINI_RANGE_E_USE: 17.226
+    MINI_RANGE_F_CUR: 104
+  response: |-
     660F1100B62D10D0000
     660F121A7C10000A7C1
     660F10562D1070000
@@ -33,191 +73,175 @@ test_cases:
     660F1100F62D11103D4
     660F121058C0410FFFF
     660F122434A0059FFFF
-  expected_values:
-    MINI_AUX_PWR: 0.89
-    MINI_RANGE_E_CUR: 98
-    MINI_RANGE_E_MAX: 142
-    MINI_RANGE_E_USE: 17.226
-    MINI_RANGE_F_CUR: 104
-- response: |-
-    660F1100B62D10D0000
-    660F121A7CB0000A7CB
-    660F1100F62D1110384
-    660F121058C0398FFFF
-    660F122429A005CFFFF
-  expected_values:
+- expected_values:
     MINI_AUX_PWR: 0.92
     MINI_RANGE_E_CUR: 90
     MINI_RANGE_E_MAX: 142
     MINI_RANGE_E_USE: 17.05
     MINI_RANGE_F_CUR: 92
-- response: |-
-    660F1100F62D1110032
-    660F12105C8003CFFFF
-    660F122471D003FFFFF
-  expected_values:
+  response: |-
+    660F1100B62D10D0000
+    660F121A7CB0000A7CB
+    660F1100F62D1110384
+    660F121058C0398FFFF
+    660F122429A005CFFFF
+- expected_values:
     MINI_AUX_PWR: 0.63
     MINI_RANGE_E_CUR: 5
     MINI_RANGE_E_MAX: 148
     MINI_RANGE_E_USE: 18.205
     MINI_RANGE_F_CUR: 6
-- response: |-
-    660F1100F62D111005A
-    660F121041A00A0FFFF
-    660F1224A500032FFFF
-  expected_values:
-    MINI_AUX_PWR: 0.5
-    MINI_RANGE_E_CUR: 9
-    MINI_RANGE_E_MAX: 105
-    MINI_RANGE_E_USE: 19.024
-    MINI_RANGE_F_CUR: 16
-- response: |-
-    660F1100F62D111005A
-    660F12105F0006EFFFF
-    660F12246F0002DFFFF
-  expected_values:
-    MINI_AUX_PWR: 0.45
-    MINI_RANGE_E_CUR: 9
-    MINI_RANGE_E_MAX: 152
-    MINI_RANGE_E_USE: 18.16
-    MINI_RANGE_F_CUR: 11
-- response: |-
-    660F1100F62D11100A0
-    660F121037A00D2FFFF
-    660F1224A500051FFFF
-  expected_values:
+  response: |-
+    660F1100F62D1110032
+    660F12105C8003CFFFF
+    660F122471D003FFFFF
+- expected_values:
     MINI_AUX_PWR: 0.81
     MINI_RANGE_E_CUR: 16
     MINI_RANGE_E_MAX: 89
     MINI_RANGE_E_USE: 19.024
     MINI_RANGE_F_CUR: 21
-- response: |-
-    660F1100F62D1110168
-    660F1210442029EFFFF
-    660F12259000046FFFF
-  expected_values:
-    MINI_AUX_PWR: 0.7
-    MINI_RANGE_E_CUR: 36
-    MINI_RANGE_E_MAX: 109
-    MINI_RANGE_E_USE: 22.784
-    MINI_RANGE_F_CUR: 67
-- response: |-
-    660F1100F62D111017C
-    660F121060401A4FFFF
-    660F12241FF0061FFFF
-  expected_values:
+  response: |-
+    660F1100F62D11100A0
+    660F121037A00D2FFFF
+    660F1224A500051FFFF
+- expected_values:
+    MINI_AUX_PWR: 1.06
+    MINI_RANGE_E_CUR: 21
+    MINI_RANGE_E_MAX: 147
+    MINI_RANGE_E_USE: 17.408
+    MINI_RANGE_F_CUR: 27
+  response: |-
+    660F1100F62D11100D2
+    660F12105BE010EFFFF
+    660F1224400006AFFFF
+- expected_values:
     MINI_AUX_PWR: 0.97
     MINI_RANGE_E_CUR: 38
     MINI_RANGE_E_MAX: 154
     MINI_RANGE_E_USE: 16.895
     MINI_RANGE_F_CUR: 42
-- response: |-
-    660F1100F62D1110190
-    660F1210F140190FFFF
-    660F122519D0053FFFF
-  expected_values:
+  response: |-
+    660F1100F62D111017C
+    660F121060401A4FFFF
+    660F12241FF0061FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.93
+    MINI_RANGE_E_CUR: 39
+    MINI_RANGE_E_MAX: 139
+    MINI_RANGE_E_USE: 17.617
+    MINI_RANGE_F_CUR: 44
+  response: |-
+    660F1100F62D1110186
+    660F121056E01B8FFFF
+    660F12244D1005DFFFF
+- expected_values:
     MINI_AUX_PWR: 0.83
     MINI_RANGE_E_CUR: 40
     MINI_RANGE_E_MAX: 386
     MINI_RANGE_E_USE: 20.893
     MINI_RANGE_F_CUR: 40
-- response: |-
-    660F1100F62D11101FE
-    660F121044C01FEFFFF
-    660F122588F0047FFFF
-  expected_values:
+  response: |-
+    660F1100F62D1110190
+    660F1210F140190FFFF
+    660F122519D0053FFFF
+- expected_values:
     MINI_AUX_PWR: 0.71
     MINI_RANGE_E_CUR: 51
     MINI_RANGE_E_MAX: 110
     MINI_RANGE_E_USE: 22.671
     MINI_RANGE_F_CUR: 51
-- response: |-
-    660F1100F62D1110212
-    660F12105BE0212FFFF
-    660F12244F20056FFFF
-  expected_values:
-    MINI_AUX_PWR: 0.86
-    MINI_RANGE_E_CUR: 53
-    MINI_RANGE_E_MAX: 147
-    MINI_RANGE_E_USE: 17.65
-    MINI_RANGE_F_CUR: 53
-- response: |-
-    660F1100F62D111024E
-    660F12104380384FFFF
-    660F1225A400059FFFF
-  expected_values:
+  response: |-
+    660F1100F62D11101FE
+    660F121044C01FEFFFF
+    660F122588F0047FFFF
+- expected_values:
     MINI_AUX_PWR: 0.89
     MINI_RANGE_E_CUR: 59
     MINI_RANGE_E_MAX: 108
     MINI_RANGE_E_USE: 23.104
     MINI_RANGE_F_CUR: 90
-- response: |-
-    660F1100F62D111035C
-    660F1210596038EFFFF
-    660F122410D0063FFFF
-  expected_values:
-    MINI_AUX_PWR: 0.99
-    MINI_RANGE_E_CUR: 86
-    MINI_RANGE_E_MAX: 143
-    MINI_RANGE_E_USE: 16.653
+  response: |-
+    660F1100F62D111024E
+    660F12104380384FFFF
+    660F1225A400059FFFF
+- expected_values:
+    MINI_AUX_PWR: 1.78
+    MINI_RANGE_E_CUR: 77
+    MINI_RANGE_E_MAX: 121
+    MINI_RANGE_E_USE: 18.033
+    MINI_RANGE_F_CUR: 88
+  response: |-
+    660F1100F62D1110302
+    660F12104BA0370FFFF
+    660F122467100B2FFFF
+- expected_values:
+    MINI_AUX_PWR: 1.01
+    MINI_RANGE_E_CUR: 77
+    MINI_RANGE_E_MAX: 136
+    MINI_RANGE_E_USE: 18.118
+    MINI_RANGE_F_CUR: 88
+  response: |-
+    660F1100F62D1110302
+    660F12105500370FFFF
+    660F12246C60065FFFF
+- expected_values:
+    MINI_AUX_PWR: 0.85
+    MINI_RANGE_E_CUR: 81
+    MINI_RANGE_E_MAX: 144
+    MINI_RANGE_E_USE: 17.341
     MINI_RANGE_F_CUR: 91
-- response: |-
-    660F1100F62D1110410
-    660F121062C0410FFFF
-    660F1224306001CFFFF
-  expected_values:
+  response: |-
+    660F1100F62D111032A
+    660F12105A0038EFFFF
+    660F12243BD0055FFFF
+- expected_values:
     MINI_AUX_PWR: 0.28
     MINI_RANGE_E_CUR: 104
     MINI_RANGE_E_MAX: 158
     MINI_RANGE_E_USE: 17.158
     MINI_RANGE_F_CUR: 104
-- response: |-
-    660F1100F62D111042E
-    660F121049C06EAFFFF
-    660F1224D420045FFFF
-  expected_values:
-    MINI_AUX_PWR: 0.69
-    MINI_RANGE_E_CUR: 107
-    MINI_RANGE_E_MAX: 118
-    MINI_RANGE_E_USE: 19.778
-    MINI_RANGE_F_CUR: 177
-- response: |-
-    660F1100F62D111044C
-    660F12105AA0492FFFF
-    660F1223F2F0082FFFF
-  expected_values:
-    MINI_AUX_PWR: 1.3
-    MINI_RANGE_E_CUR: 110
-    MINI_RANGE_E_MAX: 145
-    MINI_RANGE_E_USE: 16.175
-    MINI_RANGE_F_CUR: 117
-- response: |-
-    660F1100F62D1110500
-    660F1210500051EFFFF
-    660F12241B70055FFFF
-  expected_values:
+  response: |-
+    660F1100F62D1110410
+    660F121062C0410FFFF
+    660F1224306001CFFFF
+- expected_values:
     MINI_AUX_PWR: 0.85
     MINI_RANGE_E_CUR: 128
     MINI_RANGE_E_MAX: 128
     MINI_RANGE_E_USE: 16.823
     MINI_RANGE_F_CUR: 131
-- response: |-
-    660F1100F62D1110532
-    660F12105D20596FFFF
-    660F122411B0049FFFF
-  expected_values:
+  response: |-
+    660F1100F62D1110500
+    660F1210500051EFFFF
+    660F12241B70055FFFF
+- expected_values:
     MINI_AUX_PWR: 0.73
     MINI_RANGE_E_CUR: 133
     MINI_RANGE_E_MAX: 149
     MINI_RANGE_E_USE: 16.667
     MINI_RANGE_F_CUR: 143
-- response: |-
-    660F1100F62D11105A0
-    660F12105FA05A0FFFF
-    660F1223DEA005BFFFF
-  expected_values:
+  response: |-
+    660F1100F62D1110532
+    660F12105D20596FFFF
+    660F122411B0049FFFF
+- expected_values:
+    MINI_AUX_PWR: 1.1
+    MINI_RANGE_E_CUR: 139
+    MINI_RANGE_E_MAX: 139
+    MINI_RANGE_E_USE: 17.587
+    MINI_RANGE_F_CUR: 180
+  response: |-
+    660F1100F62D111056E
+    660F121056E0708FFFF
+    660F12244B3006EFFFF
+- expected_values:
     MINI_AUX_PWR: 0.91
     MINI_RANGE_E_CUR: 144
     MINI_RANGE_E_MAX: 153
     MINI_RANGE_E_USE: 15.85
     MINI_RANGE_F_CUR: 144
+  response: |-
+    660F1100F62D11105A0
+    660F12105FA05A0FFFF
+    660F1223DEA005BFFFF
