--- a/tests/test_cases/2020/commands/6F1.660.22D112|e=60,fc=1.yaml
+++ b/tests/test_cases/2020/commands/6F1.660.22D112|e=60,fc=1.yaml
@@ -1,11 +1,11 @@
 command_id: 6F1.660.22D112|e=60,fc=1
 test_cases:
-- response: 660F10562D1126060
-  expected_values:
+- expected_values:
     MINI_AAT: 8
-- response: 660F10562D112949C
-  expected_values:
-    MINI_AAT: 34
-- response: 660F10562D1129797
-  expected_values:
+  response: 660F10562D1126060
+- expected_values:
+    MINI_AAT: 32
+  response: 660F10562D11290A0
+- expected_values:
     MINI_AAT: 35.5
+  response: 660F10562D1129797
