--- a/tests/test_cases/2022/commands/6F1.656.22DCDD|e=56,fc=1.yaml
+++ b/tests/test_cases/2022/commands/6F1.656.22DCDD|e=56,fc=1.yaml
@@ -1,10 +1,6 @@
 command_id: 6F1.656.22DCDD|e=56,fc=1
 test_cases:
-- response: |-
-    656F1100F62DCDD0000
-    656F121030300000202
-    656F12200000000FFFF
-  expected_values:
+- expected_values:
     MINI_CENTRAL_LOCK: 2
     MINI_DOOR_DRIVER: 0
     MINI_DOOR_DRIVER_REAR: 3
@@ -13,11 +9,11 @@ test_cases:
     MINI_HOOD: 0
     MINI_REAR_WINDOW: 2
     MINI_TRUNK: 0
-- response: |-
+  response: |-
     656F1100F62DCDD0000
-    656F121030300000203
+    656F121030300000202
     656F12200000000FFFF
-  expected_values:
+- expected_values:
     MINI_CENTRAL_LOCK: 3
     MINI_DOOR_DRIVER: 0
     MINI_DOOR_DRIVER_REAR: 3
@@ -26,11 +22,11 @@ test_cases:
     MINI_HOOD: 0
     MINI_REAR_WINDOW: 2
     MINI_TRUNK: 0
-- response: |-
+  response: |-
     656F1100F62DCDD0000
-    656F121030300010203
+    656F121030300000203
     656F12200000000FFFF
-  expected_values:
+- expected_values:
     MINI_CENTRAL_LOCK: 3
     MINI_DOOR_DRIVER: 0
     MINI_DOOR_DRIVER_REAR: 3
@@ -39,11 +35,11 @@ test_cases:
     MINI_HOOD: 0
     MINI_REAR_WINDOW: 2
     MINI_TRUNK: 1
-- response: |-
+  response: |-
     656F1100F62DCDD0000
-    656F121030301000203
+    656F121030300010203
     656F12200000000FFFF
-  expected_values:
+- expected_values:
     MINI_CENTRAL_LOCK: 3
     MINI_DOOR_DRIVER: 0
     MINI_DOOR_DRIVER_REAR: 3
@@ -52,11 +48,11 @@ test_cases:
     MINI_HOOD: 1
     MINI_REAR_WINDOW: 2
     MINI_TRUNK: 0
-- response: |-
-    656F1100F62DCDD0100
-    656F121030300000203
+  response: |-
+    656F1100F62DCDD0000
+    656F121030301000203
     656F12200000000FFFF
-  expected_values:
+- expected_values:
     MINI_CENTRAL_LOCK: 3
     MINI_DOOR_DRIVER: 1
     MINI_DOOR_DRIVER_REAR: 3
@@ -65,3 +61,7 @@ test_cases:
     MINI_HOOD: 0
     MINI_REAR_WINDOW: 2
     MINI_TRUNK: 0
+  response: |-
+    656F1100F62DCDD0100
+    656F121030300000203
+    656F12200000000FFFF
